Discount Mikro Servis => Context ve Migration İşlemi

--- a/Services/Discount/MultiShop.Discount/appsettings.json
+++ b/Services/Discount/MultiShop.Discount/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-6IU1HSS;initial Catalog=MultiShopDiscountDb;integrated Security=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
