--- a/MultShop.Cargo.DataAccessLayer/MultShop.Cargo.DataAccessLayer.csproj
+++ b/MultShop.Cargo.DataAccessLayer/MultShop.Cargo.DataAccessLayer.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.29" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Services\Cargo\MultShop.Cargo.EntityLayer\MultShop.Cargo.EntityLayer.csproj" />
+  </ItemGroup>
+
 </Project>
