--- a/Services/Cargo/MultShop.Cargo.WebApi/MultShop.Cargo.WebApi.csproj
+++ b/Services/Cargo/MultShop.Cargo.WebApi/MultShop.Cargo.WebApi.csproj
@@ -7,7 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.29">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.29">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\MultShop.Cargo.DataAccessLayer\MultShop.Cargo.DataAccessLayer.csproj" />
+    <ProjectReference Include="..\MultShop.Cargo.BusinessLayer\MultShop.Cargo.BusinessLayer.csproj" />
+    <ProjectReference Include="..\MultShop.Cargo.DtoLayer\MultShop.Cargo.DtoLayer.csproj" />
+    <ProjectReference Include="..\MultShop.Cargo.EntityLayer\MultShop.Cargo.EntityLayer.csproj" />
   </ItemGroup>
 
 </Project>
