--- a/Services/Cargo/MultShop.Cargo.BusinessLayer/MultShop.Cargo.BusinessLayer.csproj
+++ b/Services/Cargo/MultShop.Cargo.BusinessLayer/MultShop.Cargo.BusinessLayer.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\MultShop.Cargo.DataAccessLayer\MultShop.Cargo.DataAccessLayer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+    <Folder Include="ValidationRules\" />
+  </ItemGroup>
+
 </Project>
