--- a/Services/Cargo/MultShop.Cargo.WebApi/Properties/launchSettings.json
+++ b/Services/Cargo/MultShop.Cargo.WebApi/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "MultShop.Cargo.WebApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7024;http://localhost:5059",
+      "applicationUrl": "https://localhost:7103;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
