--- a/Service/Basket/MultiShop.Basket/Properties/launchSettings.json
+++ b/Service/Basket/MultiShop.Basket/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "MultiShop.Basket": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7239;http://localhost:5186",
+      "applicationUrl": "https://localhost:7104",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
