yanlış isimlendirme webuo => webui

--- a/Frontends/MultiShop.WebUO/Properties/launchSettings.json
+++ b/Frontends/MultiShop.WebUO/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "MultiShop.WebUO": {
+    "MultiShop.WebUI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
