--- a/Services/Catalog/MultiShop.Catalog/appsettings.json
+++ b/Services/Catalog/MultiShop.Catalog/appsettings.json
@@ -7,6 +7,7 @@
     "FeatureSliderCollectionName": "FeatureSliders",
     "SpecialOfferCollectionName": "SpecialOffers",
     "OfferDiscountCollectionName": "OfferDiscounts",
+    "AboutCollectionName": "Abouts",
     "BrandCollectionName": "Brands",
     "FeatureCollectionName": "Features",
     "ConnectionString": "mongodb://localhost:27017/",
