--- a/Comment/MultiShop.Comment/Properties/launchSettings.json
+++ b/Comment/MultiShop.Comment/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "MultiShop.Comment": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7194;http://localhost:5181",
+      "applicationUrl": "https://localhost:7105",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
