WebUI İletişim sayfası

--- a/Services/Catalog/MultiShop.Catalog/appsettings.json
+++ b/Services/Catalog/MultiShop.Catalog/appsettings.json
@@ -10,6 +10,8 @@
     "AboutCollectionName": "Abouts",
     "BrandCollectionName": "Brands",
     "FeatureCollectionName": "Features",
+    "ContactCollectionName": "Contacts",
+
     "ConnectionString": "mongodb://localhost:27017/",
     "DatabaseName": "MultiShopCatalogDb"
   },
