Ocelat Gateway Mikro Servis Authentication ayarı

--- a/Services/Payment/MultiShop.Payment/Properties/launchSettings.json
+++ b/Services/Payment/MultiShop.Payment/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "MultiShop.Payment": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7106",
+      "applicationUrl": "http://localhost:7106",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
