--- a/Comment/MultiShop.Comment/Properties/launchSettings.json
+++ b/Comment/MultiShop.Comment/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7105",
+      "applicationUrl": "http://localhost:7105",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
