--- a/Services/Catalog/MultiShop.Catalog/Properties/launchSettings.json
+++ b/Services/Catalog/MultiShop.Catalog/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7100",
+      "applicationUrl": "http://localhost:7100",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
