--- a/Services/Images/MultiShop.Images/Properties/launchSettings.json
+++ b/Services/Images/MultiShop.Images/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "MultiShop.Images": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7107",
+      "applicationUrl": "http://localhost:7107",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
