--- a/Frontends/MultiShop.WebUO/appsettings.json
+++ b/Frontends/MultiShop.WebUO/appsettings.json
@@ -3,7 +3,7 @@
     "OcelotUrl": "http://localhost:5000",
     "IdentityServerUrl": "http://localhost:5001",
     "Catalog": {
-      "Path": "services/catalog"
+      "Path": "services/catalog/"
     },
     "Discount": {
       "Path": "services/discount"
@@ -18,7 +18,7 @@
       "Path": "services/basket"
     },
     "Comment": {
-      "Path": "services/comment"
+      "Path": "services/comment/"
     },
     "Payment": {
       "Path": "services/paymnet"
