--- a/Frontends/MultiShop.WebUO/appsettings.json
+++ b/Frontends/MultiShop.WebUO/appsettings.json
@@ -6,7 +6,7 @@
       "Path": "services/catalog/"
     },
     "Discount": {
-      "Path": "services/discount"
+      "Path": "services/discount/"
     },
     "Order": {
       "Path": "services/order"
@@ -15,7 +15,7 @@
       "Path": "services/cargo"
     },
     "Basket": {
-      "Path": "services/basket"
+      "Path": "services/basket/"
     },
     "Comment": {
       "Path": "services/comment/"
