sipariş özeti ve sipariş adres ekranı

--- a/Frontends/MultiShop.WebUO/appsettings.json
+++ b/Frontends/MultiShop.WebUO/appsettings.json
@@ -9,7 +9,7 @@
       "Path": "services/discount/"
     },
     "Order": {
-      "Path": "services/order"
+      "Path": "services/order/"
     },
     "Cargo": {
       "Path": "services/cargo"
